Added welcome screen when user enters site at 1st session

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <title>Title of the document</title>
     <link rel="stylesheet" href="style/style.css">
-    
 </head>
 
 <body>
     <div id="wrapper">
-        
+
     </div>
 
+    <script src="script/pageUI.js"></script>    
     <script src="script/gridGenerator.js"></script>
     <script src="script/pageMobility.js" defer></script>
 </body>
