--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
 
 <body>
     <div id="wrapper">
-
+        
+    </div>
+    <div id="toolbar">
+        <div id="item1" class="itemHolder" style="background: none;"><img src="./img/toolbar/obsidian.png"><div class="itemSelected"></div></div>
+        <div id="item2" class="itemHolder"><img src="./img/toolbar/flintnsteel.png"></div>
+        <div id="item3" class="itemHolder"><img src="./img/toolbar/pickaxe.png"></div>
+        <div id="item4" class="itemHolder"></div>
+        <div id="item5" class="itemHolder"></div>
+        <div id="item6" class="itemHolder"></div>
+        <div id="item7" class="itemHolder"></div>
+        <div id="item8" class="itemHolder"></div>
+        <div id="item9" class="itemHolder"></div>
     </div>
 
     <script src="script/pageUI.js"></script>    
     <script src="script/gridGenerator.js"></script>
     <script src="script/pageMobility.js" defer></script>
+    <script src="script/toolbar.js"></script>   
 </body>
 
 </html>
