Places the obsidian block and removes with pickaxe

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="script/gridGenerator.js"></script>
     <script src="script/pageMobility.js" defer></script>
     <script src="script/toolbar.js"></script>   
+    <script src="script/obsidian.js"></script>    
 </body>
 
 </html>
